2004-08-23  callum  <callum@spooky-possum.org>

	* C/spider_two_suit.xml:
	* C/spider_one_suit.xml:
	* C/Makefile.am:
	* C/aisleriot.xml: Add documentation for one and two-suit spider.

2004-06-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* C/aisleriot.xml: Document click-to-move.

2004-05-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* C/quatorze.xml: Fix a typo. Spotted by Kurt McKee 
	(bug #142630).

2004-04-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* C/aisleriot.xml: Add plait.xml to the document, it seems to have
	been mysteriously left out in the past.

	* C/*.xml: bridgehead tag -> sect2 since yelp doesn't seem to
	support bridgehead.

2004-03-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* C/*.xml: Rearrange the documentation so that each game has its
	own page. This means that article->book sect1->chapter and
	sect2->sect1.

2004-02-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* C/aisleriot.xml: Updated to 2.6.

2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* C/aisleriot.xml: Updated to mention the statistics.

2003-12-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* C/seahaven.xml: Noted the new feature in seahaven that allows a
	sequence to be moved directly to the foundation.

2003-11-19  Callum McKenzie  <callum@localhost.localdomain>

	* C/Makefile.am: Rearrange to make sure that makedistcleancheck is
	happy.

2003-07-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* C/spider.xml: Updated to reflect a subtle change in the win
	condition (for consistency you now have to move the completed
	sequences up to the foundation). 

2003-06-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* C/*.xml: Updated to work with even the more broken yelp
	versions (well, at least *my* broken yelp version). Also
	rearranged the copyright codes so that the copyright isn't
	plastered over every single page. It is still plastered over the
	appropriate files so Rosanna should still be getting the credit,