@@ -75,9 +75,9 @@
 <!ENTITY zebra SYSTEM "zebra.xml">
 <!ENTITY definitions SYSTEM "definitions.xml">
 <!ENTITY legal SYSTEM "legal.xml">
-<!ENTITY appversion "2.6">
-<!ENTITY manrevision "2.6">
-<!ENTITY date "February 2004">
+<!ENTITY appversion "2.8">
+<!ENTITY manrevision "2.8">
+<!ENTITY date "September 2004">
 <!ENTITY app "<application>AisleRiot</application>">
 <!ENTITY appname "AisleRiot">
 ]>
