@@ -45,7 +45,7 @@ won if your Tableau looks like this --
 There are two phases to this game.  Alternate between the two phases
 until game is lost or won.  Start with Phase One until Tableau is
 completely filled.  At that point, move to Phase Two.  Please note that
-you cannot begin Phase Two unless Tableau is completely filled.  At any
+you cannot begin Phase Two unless the Tableau is completely filled.  At any
 point, you can return to Phase One, but remember that you cannot go back
 to Phase Two unless the tableau is once again filled.  An exception to
 this rule is if the stock and waste are empty.  
