@@ -1,3 +1,13 @@
+2004-09-08  callum  <callum@spooky-possum.org>
+
+	* C/camelot.xml: 	
+	* C/figures/*.png: Fix a typo in camelot.xml and redo the figure
+	graphics to match reality.
+
+2004-09-04  callum  <callum@spooky-possum.org>
+
+	* C/aisleriot.xml: Updated for 2.8.
+
 2004-08-23  callum  <callum@spooky-possum.org>
 
 	* C/spider_two_suit.xml:
